@@ -151,4 +151,128 @@ class TemplatesModelTemplate extends JModel
 
 		return $this->template;
 	}
+
+	/**
+	 * Method to check if new template name already exists
+	 *
+	 * @return	boolean   true if name is not used, false otherwise
+	 * @since	2.5
+	 */
+	public function checkNewName()
+	{
+		$db = $this->getDbo();
+		$query = $db->getQuery(true);
+		$query->select('COUNT(*)');
+		$query->from('#__extensions');
+		$query->where('name = ' . $db->quote($this->getState('new_name')));
+		$db->setQuery($query);
+		return ($db->loadResult() == 0);
+	}
+
+	/**
+	 * Method to check if new template name already exists
+	 *
+	 * @return	string     name of current template
+	 * @since	2.5
+	 */
+	public function getFromName()
+	{
+		return $this->getTemplate()->element;
+	}
+
+	/**
+	 * Method to check if new template name already exists
+	 *
+	 * @return	boolean   true if name is not used, false otherwise
+	 * @since	2.5
+	 */
+	public function copy()
+	{
+		if ($template = $this->getTemplate())
+		{
+			jimport('joomla.filesystem.folder');
+			$client = JApplicationHelper::getClientInfo($template->client_id);
+			$fromPath = JPath::clean($client->path.'/templates/'.$template->element.'/');
+
+			// Delete new folder if it exists
+			$toPath = $this->getState('to_path');
+			if (JFolder::exists($toPath))
+			{
+				if (!JFolder::delete($toPath))
+				{
+					JError::raiseWarning(403, JText::_('COM_TEMPLATES_ERROR_COULD_NOT_WRITE'));
+					return false;
+				}
+			}
+
+			// Copy all files from $fromName template to $newName folder
+			if (!JFolder::copy($fromPath, $toPath) || !$this->fixTemplateName())
+			{
+				return false;
+			}
+
+		return true;
+		}
+		else
+		{
+			JError::raiseWarning(403, JText::_('COM_TEMPLATES_ERROR_INVALID_FROM_NAME'));
+			return false;
+		}
+	}
+
+	/**
+	 * Method to delete tmp folder
+	 *
+	 * @return	boolean   true if delete successful, false otherwise
+	 * @since	2.5
+	 */
+	public function cleanup()
+	{
+		// Clear installation messages
+		$app = JFactory::getApplication();
+		$app->setUserState('com_installer.message', '');
+		$app->setUserState('com_installer.extension_message', '');
+
+		// Delete temporary directory
+		return JFolder::delete($this->getState('to_path'));
+
+	}
+
+	/**
+	 * Method to rename the template in the XML files and rename the language files
+	 *
+	 * @return	boolean   true if successful, false otherwise
+	 * @since	2.5
+	 */
+	protected function fixTemplateName()
+	{
+		// Rename Language files
+		// Get list of language files
+		$result = true;
+		$files = JFolder::files($this->getState('to_path'), '.ini', true, true);
+		$newName = $this->getState('new_name');
+		$oldName = $this->getTemplate()->element;
+
+		foreach ($files as $file)
+		{
+			$newFile = str_replace($oldName, $newName, $file);
+			$result = JFile::move($file, $newFile) && $result;
+		}
+
+		// Edit XML file
+		$xmlFile = $this->getState('to_path') . '/templateDetails.xml';
+		if (JFile::exists($xmlFile))
+		{
+			$contents = JFile::read($xmlFile);
+			$pattern[] = '#<name>\s*' . $oldName . '\s*</name>#';
+			$replace[] = '<name>'. $newName . '</name>';
+			$pattern[] = '#<language(.*)' . $oldName . '(.*)</language>#';
+			$replace[] = '<language${1}' . $newName . '${2}</language>';
+			$contents = preg_replace($pattern, $replace, $contents);
+			$result = JFile::write($xmlFile, $contents) && $result;
+		}
+
+		return $result;
+	}
+
 }
