@@ -13,12 +13,20 @@ COM_TEMPLATES_CONFIG_FIELDSET_DESC="Global Configuration for Templates"
 COM_TEMPLATES_CONFIG_POSITIONS_DESC="Enable the preview of the module positions in the template by appending tp=1 to the web address. Also enables the Preview button in the list of templates. Please refresh the page after changing this setting."
 COM_TEMPLATES_CONFIG_POSITIONS_LABEL="Preview Module Positions"
 COM_TEMPLATES_CONFIGURATION="Template Manager Options"
+COM_TEMPLATES_COPY_SUCCESS="New template called %s was installed successfully."
 COM_TEMPLATES_ERR_XML="Template XML data non available"
 COM_TEMPLATES_ERROR_CANNOT_DELETE_LAST_STYLE="Cannot delete last style of a template"
 COM_TEMPLATES_ERROR_CANNOT_UNSET_DEFAULT_STYLE="Cannot unset default style"
+COM_TEMPLATES_ERROR_COULD_NOT_COPY="Unable to copy template files to temporary directory."
+COM_TEMPLATES_ERROR_COULD_NOT_INSTALL="Unable to install new template from temporary directory."
+COM_TEMPLATES_ERROR_COULD_NOT_WRITE="Unable to delete temporary directory."
+COM_TEMPLATES_ERROR_CREATE_NOT_PERMITTED="Unable to create temporary directory."
+COM_TEMPLATES_ERROR_DUPLICATE_TEMPLATE_NAME="A template with this name already is installed." 
 COM_TEMPLATES_ERROR_EDITOR_DISABLED="Either the CodeMirror or the None editor plug-in should be enabled to edit template files"
 COM_TEMPLATES_ERROR_EXTENSION_RECORD_NOT_FOUND="Extension record not found in database"
 COM_TEMPLATES_ERROR_FAILED_TO_SAVE_FILENAME="An error occurred. The file %s could not be saved."
+COM_TEMPLATES_ERROR_INVALID_FROM_NAME="Template to copy from cannot be found."
+COM_TEMPLATES_ERROR_INVALID_TEMPLATE_NAME="Invalid template name. Please use only letters, numbers, dashes, and underscrores."
 COM_TEMPLATES_ERROR_SAVE_DISABLED_TEMPLATE="Unable to save a style associated to a disabled template"
 COM_TEMPLATES_ERROR_SOURCE_FILE_NOT_FOUND="Source file not found"
 COM_TEMPLATES_ERROR_SOURCE_FILE_NOT_UNWRITABLE="Source file can't be returned to unwritable status"
@@ -57,8 +65,8 @@ COM_TEMPLATES_MANAGER_VIEW_TEMPLATE="Template Manager: Customise Template"
 COM_TEMPLATES_MENU_CHANGED_1="One menu item has been assigned or unassigned to this style"
 COM_TEMPLATES_MENU_CHANGED_MORE="%d menu items have been assigned or unassigned to this style"
 COM_TEMPLATES_MENUS_ASSIGNMENT="Menus assignment"
-COM_TEMPLATES_MSG_MANAGE_NO_TEMPLATES="There are no templates installed matching your query"
 COM_TEMPLATES_MSG_MANAGE_NO_STYLES="There are no styles installed matching your query"
+COM_TEMPLATES_MSG_MANAGE_NO_TEMPLATES="There are no templates installed matching your query"
 COM_TEMPLATES_N_ITEMS_DELETED="%d template styles successfully deleted"
 COM_TEMPLATES_N_ITEMS_DELETED_1="Template style successfully deleted"
 COM_TEMPLATES_NO_TEMPLATE_SELECTED="No template selected"
@@ -74,6 +82,7 @@ COM_TEMPLATES_SUCCESS_HOME_SET="Default style successfully set."
 COM_TEMPLATES_SUCCESS_HOME_UNSET="Default style successfully unset."
 COM_TEMPLATES_TEMPLATE_ADD_CSS="Add new stylesheet"
 COM_TEMPLATES_TEMPLATE_ADD_ERROR="Add custom error page template (optional)"
+COM_TEMPLATES_TEMPLATE_COPY="Copy Template"
 COM_TEMPLATES_TEMPLATE_CSS="Stylesheets"
 COM_TEMPLATES_TEMPLATE_DESCRIPTION="Template description"
 COM_TEMPLATES_TEMPLATE_DETAILS="%s Details and Files"
@@ -85,6 +94,8 @@ COM_TEMPLATES_TEMPLATE_EDIT_PRINTVIEW="Edit print view template"
 COM_TEMPLATES_TEMPLATE_FILENAME="Editing file "_QQ_"%s"_QQ_" in template "_QQ_"%s"_QQ_"."
 COM_TEMPLATES_TEMPLATE_HTML="HTML files"
 COM_TEMPLATES_TEMPLATE_MASTER_FILES="Template Master Files"
+COM_TEMPLATES_TEMPLATE_NEW_NAME_DESC="New Title Name::Enter the name of the new template. Please use letters, numbers, and underscore only."
+COM_TEMPLATES_TEMPLATE_NEW_NAME_LABEL="New Template Name"
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW="No preview available. You can enable preview in the options."
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW_ADMIN="No preview available for Administrator templates"
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW_DESC="To enable template previews, enable the Preview Module Positions option in Template Options"
